--- a/app/src/main/res/layout/fragment_blacklist.xml
+++ b/app/src/main/res/layout/fragment_blacklist.xml
@@ -20,6 +20,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/empty_view"
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryLight"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="196dp"
+            android:layout_height="196dp"
+            android:src="@drawable/ic_block"
+            android:tint="@color/emptyIconTint"
+            android:contentDescription="@string/no_blacklists" />
+
+        <TextView
+            android:layout_width="196dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/emptyTextPrimary"
+            android:textSize="20sp"
+            android:text="@string/no_blacklists"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="172dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/emptyTextSecondary"
+            android:textSize="14sp"
+            android:text="@string/no_blacklists_summary"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
