--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -21,6 +21,8 @@
         <SwitchPreference
             android:key="@string/pref_dark_theme"
             android:title="@string/dark_theme"
+            android:summaryOn="@string/dark_theme_summary_on"
+            android:summaryOff="@string/dark_theme_summary_off"
             android:defaultValue="false" />
 
     </PreferenceCategory>
