--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="conversation_list_header_padding">32dp</dimen>
     <dimen name="message_list_padding">24dp</dimen>
     <dimen name="max_message_width">372dp</dimen>
+    <dimen name="max_gif_width">300dp</dimen>
     <dimen name="attached_image_size">192dp</dimen>
 
 </resources>
