--- a/api_implementation/src/main/res/layout/api_activity_login.xml
+++ b/api_implementation/src/main/res/layout/api_activity_login.xml
@@ -195,6 +195,12 @@
                 android:enabled="false"
                 android:layout_marginBottom="8dp" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/signup_error_hint"
+                android:layout_marginLeft="2dp"/>
+
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
