--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -21,5 +21,6 @@
     <dimen name="message_list_padding">96dp</dimen>
     <dimen name="max_message_width">436dp</dimen>
     <dimen name="max_gif_width">350dp</dimen>
+    <dimen name="compose_forward_margin">32dp</dimen>
 
 </resources>
