--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -61,7 +61,7 @@
         app:borderWidth="0dp"
         android:layout_below="@+id/toolbar_holder"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/compose_forward_margin"
         android:layout_marginTop="-28dp"
         android:clickable="true" />
 
