add a drawer item to individual conversations for scheduling a message

--- a/app/src/main/res/menu-sw600dp/navigation_drawer_messages.xml
+++ b/app/src/main/res/menu-sw600dp/navigation_drawer_messages.xml
@@ -40,6 +40,11 @@
             android:icon="@drawable/ic_block"
             android:title="@string/menu_conversation_blacklist" />
 
+        <item
+            android:id="@+id/drawer_conversation_schedule"
+            android:icon="@drawable/ic_schedule"
+            android:title="@string/menu_conversation_schedule" />
+
     </group>
 
     <group android:id="@+id/other_section">
