--- a/app/src/main/res/layout/message_received.xml
+++ b/app/src/main/res/layout/message_received.xml
@@ -44,11 +44,12 @@
             android:id="@+id/image"
             android:contentDescription="@string/mms_image" />
 
-        <com.klinker.android.link_builder.LinkConsumableTextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="@dimen/max_message_width"
             android:textSize="16sp"
+            android:background="?selectableItemBackgroundBorderless"
             android:textColor="@android:color/white"
             android:id="@+id/message" />
 
