only allow for primary devices to actually send messages and see changes to the internal content provider

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -30,6 +30,7 @@
         <text>Smoothed out some animations</text>
         <text>View more contact information when clicking on them</text>
         <text>Fix audio recording</text>
+        <text>Better support for secondary devices that have a phone number</text>
         <text>Other bug fixes</text>
         <text>UI improvements</text>
         <text>And more!</text>
