support clicking on a message to animate its timestamp into view

--- a/app/src/main/res/layout/message_sending.xml
+++ b/app/src/main/res/layout/message_sending.xml
@@ -71,7 +71,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
             android:textSize="12sp"
             android:textColor="@color/secondaryText"
             android:layout_marginStart="2dp"
