--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="drag_down_dismiss_distance">192dp</dimen>
     <dimen name="attach_menu_height">288dp</dimen>
     <dimen name="overlay_size">72dp</dimen>
+    <dimen name="timestamp_height">16sp</dimen>
 
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="conversation_list_padding">0dp</dimen>
