--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="1.1"
         description="August 30th, 2016">
+        <text>Click on message to display timestamp</text>
         <text>Server response time improvements</text>
         <text>Opposite swipe-to-delete direction</text>
         <text>Delivery notifications</text>
