--- a/app/src/main/res/layout/message_sending.xml
+++ b/app/src/main/res/layout/message_sending.xml
@@ -64,18 +64,18 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
+            android:textSize="12sp"
+            android:textColor="@color/secondaryText"
+            android:layout_marginEnd="2dp"
+            android:id="@+id/timestamp" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="@color/secondaryText"
             android:text="@string/sending" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/timestamp_height"
-            android:textSize="12sp"
-            android:textColor="@color/secondaryText"
-            android:layout_marginStart="2dp"
-            android:id="@+id/timestamp" />
 
     </LinearLayout>
 
