some message display changes & bug fixes
* add more spacing between sending text and timestamp
* add failed text underneath failed messages
* add a status to the message info window
* catch an exception resizing an image

--- a/app/src/main/res/layout/message_error.xml
+++ b/app/src/main/res/layout/message_error.xml
@@ -55,13 +55,28 @@
 
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/timestamp_height"
-        android:textSize="12sp"
-        android:textColor="@color/secondaryText"
-        android:id="@+id/timestamp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="4dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
+            android:textSize="12sp"
+            android:textColor="@color/secondaryText"
+            android:layout_marginEnd="8dp"
+            android:id="@+id/timestamp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="@color/secondaryText"
+            android:text="@string/failed" />
+
+    </LinearLayout>
 
 </LinearLayout>
