--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="September 3rd, 2016">
         <text>Quick reply from notification</text>
         <text>Share location</text>
+        <text>Share VCards</text>
         <text>Bug fixes</text>
     </version>
 
