--- a/app/src/main/res/menu-sw600dp/fragment_messages.xml
+++ b/app/src/main/res/menu-sw600dp/fragment_messages.xml
@@ -15,13 +15,6 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <item
-        android:id="@+id/menu_contact_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/menu_contact_settings"
-        app:showAsAction="always" />
+<menu>
 
 </menu>
