--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Quick reply from notification</text>
         <text>Share location</text>
         <text>Share VCards</text>
+        <text>Support updating a contact name</text>
         <text>Bug fixes</text>
     </version>
 
