--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -57,6 +57,7 @@
     <string name="pref_vibrate">vibrate</string>
     <string name="pref_delivery_reports">delivery_reports</string>
     <string name="pref_mobile_only">mobile_only</string>
+    <string name="pref_seen_convo_nav_tooltip">seen_convo_nav_tooltip</string>
     <string name="pref_snooze">snooze</string>
     <string name="pref_dark_theme">dark_theme</string>
 
