--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -41,6 +41,7 @@
     <string name="pref_help_google_plus" translatable="false">google+</string>
     <string name="pref_help_email" translatable="false">email</string>
     <string name="pref_help_twitter" translatable="false">twitter</string>
+    <string name="pref_supported_platforms" translatable="false">supported_platforms</string>
 
     <string name="pref_message_count" translatable="false">message_count</string>
 
