--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -25,6 +25,13 @@
             android:summaryOff="@string/dark_theme_summary_off"
             android:defaultValue="false" />
 
+        <ListPreference
+            android:key="@string/pref_font_size"
+            android:title="@string/font_size"
+            android:entries="@array/font_size"
+            android:entryValues="@array/font_size_values"
+            android:defaultValue="normal" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/notification_settings">
