add the settings functionality for the global theme

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -18,6 +18,14 @@
 
     <PreferenceCategory android:title="@string/theme_settings">
 
+        <ListPreference
+            android:key="@string/pref_global_color_theme"
+            android:title="@string/global_theme_color"
+            android:summary="@string/global_theme_summary"
+            android:entries="@array/global_color"
+            android:entryValues="@array/global_color_values"
+            android:defaultValue="default" />
+
         <SwitchPreference
             android:key="@string/pref_dark_theme"
             android:title="@string/dark_theme"
