--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,4 +15,50 @@
         <item>extra_large</item>
     </string-array>
 
+    <string-array name="global_color">
+        <item>@string/set_color_per_conversation</item>
+        <item>@string/material_color_red</item>
+        <item>@string/material_color_pink</item>
+        <item>@string/material_color_purple</item>
+        <item>@string/material_color_deep_purple</item>
+        <item>@string/material_color_indigo</item>
+        <item>@string/material_color_blue</item>
+        <item>@string/material_color_light_blue</item>
+        <item>@string/material_color_cyan</item>
+        <item>@string/material_color_teal</item>
+        <item>@string/material_color_green</item>
+        <item>@string/material_color_light_green</item>
+        <item>@string/material_color_lime</item>
+        <item>@string/material_color_yellow</item>
+        <item>@string/material_color_amber</item>
+        <item>@string/material_color_orange</item>
+        <item>@string/material_color_deep_orange</item>
+        <item>@string/material_color_brown</item>
+        <item>@string/material_color_gray</item>
+        <item>@string/material_color_blue_gray</item>
+    </string-array>
+
+    <string-array name="global_color_values">
+        <item>default</item>
+        <item>red</item>
+        <item>pink</item>
+        <item>purple</item>
+        <item>deep_purple</item>
+        <item>indigo</item>
+        <item>blue</item>
+        <item>light_blue</item>
+        <item>cyan</item>
+        <item>teal</item>
+        <item>green</item>
+        <item>light_green</item>
+        <item>lime</item>
+        <item>yellow</item>
+        <item>amber</item>
+        <item>orange</item>
+        <item>deep_orange</item>
+        <item>brown</item>
+        <item>gray</item>
+        <item>blue_gray</item>
+    </string-array>
+
 </resources>
