--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,9 @@
         <text>Quick reply from notification</text>
         <text>Share location</text>
         <text>Share VCards</text>
+        <text>Preference for a global color scheme</text>
+        <text>Preference for font size</text>
+        <text>View conversation media from the navigation drawer</text>
         <text>Support updating a contact name</text>
         <text>Bug fixes</text>
     </version>
