take night mode into account for the drawer

--- a/app/src/main/res/values/bools.xml
+++ b/app/src/main/res/values/bools.xml
@@ -18,5 +18,6 @@
 
     <bool name="is_tablet">false</bool>
     <bool name="pin_drawer">false</bool>
+    <bool name="is_night">false</bool>
 
 </resources>
