--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -18,13 +18,13 @@
 
     <version
         name="1.2"
-        description="September 3rd, 2016">
+        description="September 5th, 2016">
         <text>Quick reply from notification</text>
         <text>Share location</text>
-        <text>Share VCards</text>
+        <text>Share contact VCards from Contacts app</text>
         <text>Preference for a global color scheme</text>
         <text>Preference for font size</text>
-        <text>View conversation media from the navigation drawer</text>
+        <text>View all conversation media from the navigation drawer</text>
         <text>Support updating a contact name</text>
         <text>Bug fixes</text>
     </version>
