--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="base_theme">
+        <item>@string/day_night</item>
+        <item>@string/always_dark</item>
+        <item>@string/always_black</item>
+    </string-array>
+
+    <string-array name="base_theme_values">
+        <item>day_night</item>
+        <item>dark</item>
+        <item>black</item>
+    </string-array>
+
     <string-array name="font_size">
         <item>@string/font_size_small</item>
         <item>@string/font_size_normal</item>
