--- a/app/src/main/res/values/preferences.xml
+++ b/app/src/main/res/values/preferences.xml
@@ -55,6 +55,7 @@
     <string name="pref_contact_group_name" translatable="false">contact_group_name</string>
 
     <string name="pref_ringtone">ringtone</string>
+    <string name="pref_base_theme">base_theme</string>
     <string name="pref_global_color_theme">global_color_theme</string>
     <string name="pref_font_size">font_size</string>
     <string name="pref_vibrate">vibrate</string>
@@ -62,6 +63,5 @@
     <string name="pref_mobile_only">mobile_only</string>
     <string name="pref_seen_convo_nav_tooltip">seen_convo_nav_tooltip</string>
     <string name="pref_snooze">snooze</string>
-    <string name="pref_dark_theme">dark_theme</string>
 
 </resources>
