update release description and changelog

--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -22,6 +22,7 @@
         <text>Quick reply from notification</text>
         <text>Share location</text>
         <text>Share contact VCards from Contacts app</text>
+        <text>Preference for a black theme</text>
         <text>Preference for a global color scheme</text>
         <text>Preference for font size</text>
         <text>View all conversation media from the navigation drawer</text>
