make an auto summary list pref that sets the value of the pref to its summary

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -18,22 +18,21 @@
 
     <PreferenceCategory android:title="@string/theme_settings">
 
-        <ListPreference
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_base_theme"
             android:title="@string/base_theme"
             android:entries="@array/base_theme"
             android:entryValues="@array/base_theme_values"
             android:defaultValue="day_night" />
 
-        <ListPreference
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_global_color_theme"
             android:title="@string/global_theme_color"
-            android:summary="@string/global_theme_summary"
             android:entries="@array/global_color"
             android:entryValues="@array/global_color_values"
             android:defaultValue="default" />
 
-        <ListPreference
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_font_size"
             android:title="@string/font_size"
             android:entries="@array/font_size"
