--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -19,9 +19,11 @@
     <version
         name="1.3"
         description="September 7th, 2016">
+        <text>Archive conversations</text>
         <text>Finish onboarding (not applied to beta)</text>
         <text>"Read" button on notification</text>
         <text>Improve list preferences in settings</text>
+        <text>Bug fixes</text>
     </version>
     
     <version
