--- a/app/src/main/res/layout/fragment_message_list.xml
+++ b/app/src/main/res/layout/fragment_message_list.xml
@@ -54,7 +54,8 @@
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight=".25"
             android:id="@+id/attached_image_holder"
             android:layout_gravity="end"
             android:layout_marginEnd="@dimen/message_list_padding"
@@ -63,7 +64,7 @@
 
             <ImageView
                 android:layout_width="@dimen/attached_image_size"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/attached_image"
                 android:contentDescription="@string/attached_image"
                 android:layout_marginStart="12dp"
