--- a/app/src/main/res/xml/changelog.xml
+++ b/app/src/main/res/xml/changelog.xml
@@ -17,6 +17,15 @@
 <changelog>
 
     <version
+        name="1.3.1"
+        description="September 15th, 2016">
+        <text>Group messages are colored on a per contact basis</text>
+        <text>Vastly improve message uploading and downloading process</text>
+        <text>Many other background changes</text>
+        <text>Setup work for future and web features</text>
+    </version>
+
+    <version
         name="1.3"
         description="September 9th, 2016">
         <text>Archive conversations</text>
@@ -24,7 +33,6 @@
         <text>"Read" button on notification</text>
         <text>Pitch black toolbar color option</text>
         <text>Improve list preferences in settings</text>
-        <text>Vastly improve message uploading and downloading process</text>
         <text>Bug fixes</text>
         <text>Tons of force close fixes</text>
     </version>
