--- a/api_implementation/src/main/res/values/styles.xml
+++ b/api_implementation/src/main/res/values/styles.xml
@@ -26,4 +26,13 @@
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
+    <style name="api_Theme.AppCompat.Activate" parent="@style/Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/api_login_background</item>
+        <item name="colorPrimaryDark">@color/api_login_background_dark</item>
+        <item name="colorAccent">@color/api_fab_background</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@color/api_login_background</item>
+        <item name="android:windowBackground">@color/api_login_background</item>
+    </style>
+
 </resources>
